# search-rs

./: .gitignore  Cargo.toml  README.md  main.rs
lopdf/: Cargo.toml  README.md
lopdf/src/: content.rs  document.rs  error.rs  incremental_document.rs  lib.rs  nom_parser.rs  object_stream.rs  parser_aux.rs  processor.rs  reader.rs  xobject.rs
lopdf/src/common_data_structures/: mod.rs
lopdf/src/encodings/: mod.rs
lopdf/src/filters/: mod.rs
src/: core.rs  dir_rec.rs  main.rs  query.html  script.js  server.rs  styles.css  term.rs
src/snowball/: snowball_env.rs
src/snowball/algorithms/: english_stemmer.rs
