[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
tl = "0.7.8"
rayon = "1.10.0"
xml-rs = "0.8.22"
foldhash = "0.1.3"
tiny_http = "0.12.0"
serde_json = "1.0.128"
hashbrown = { version = "0.15.0", features = ["rayon"] }
lopdf = { path = "lopdf" }

[features]
dbg = []
dir_rec_stop_on_error = []
